恢复原始SS图标

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="login-page" class="page active">
             <div class="login-container">
                 <div class="logo-section">
-                    <img class="logo-img" src="logo.png" alt="logo">
+                    <div class="logo">SS</div>
                     <h1>干燥综合征健康管理</h1>
                     <p>个人数据采集工具</p>
                 </div>
