添加管理员账号，支持永久删除患者

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <div class="module-grid" id="module-list"></div>
             <div class="export-section">
                 <button class="btn-export" onclick="exportPatientData()">导出该患者数据</button>
+                <button class="btn-delete" id="delete-btn" onclick="deletePatient()">🗑️ 永久删除患者</button>
             </div>
         </div>
 
