--- a/index.html
+++ b/index.html
@@ -50,7 +50,55 @@
             <div class="patient-list" id="patient-list"></div>
             <div class="add-patient-section">
                 <button class="btn-add" onclick="showAddPatient()">+ 添加患者</button>
-                <button class="btn-export-all" onclick="exportAllPatients()">📤 导出全部数据</button>
+                <button class="btn-export-all" onclick="showExportOptions()">📤 导出数据</button>
+                <button class="btn-backup" onclick="showBackupModal()">💾 备份/恢复</button>
+            </div>
+        </div>
+
+        <!-- 备份恢复弹窗 -->
+        <div id="backup-modal" class="modal">
+            <div class="modal-content">
+                <h3>数据备份与恢复</h3>
+                <div class="backup-section">
+                    <p class="backup-hint">备份可防止数据丢失，建议定期导出备份文件</p>
+                    <button class="btn-backup-action" onclick="exportBackup()">📥 导出备份文件</button>
+                    <div class="backup-divider">或</div>
+                    <label class="btn-restore-action">
+                        📤 导入备份文件
+                        <input type="file" id="restore-file" accept=".json" onchange="importBackup(event)" style="display:none;">
+                    </label>
+                </div>
+                <div class="modal-buttons">
+                    <button class="btn-cancel" onclick="hideBackupModal()">关闭</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- 导出选项弹窗 -->
+        <div id="export-options-modal" class="modal">
+            <div class="modal-content">
+                <h3>导出数据选项</h3>
+                <div class="export-options">
+                    <label class="export-option-item">
+                        <input type="checkbox" id="export-include-excluded"> 包含已剔除患者
+                    </label>
+                    <label class="export-option-item">
+                        <input type="checkbox" id="export-anonymize"> 脱敏处理（隐藏姓名/住院号）
+                    </label>
+                    <div class="export-format-section">
+                        <p>导出格式：</p>
+                        <label class="export-option-item">
+                            <input type="radio" name="export-format" value="long" checked> 长表格式（患者-模块-字段-值）
+                        </label>
+                        <label class="export-option-item">
+                            <input type="radio" name="export-format" value="wide"> 宽表格式（每字段一列，适合统计分析）
+                        </label>
+                    </div>
+                </div>
+                <div class="modal-buttons">
+                    <button class="btn-cancel" onclick="hideExportOptions()">取消</button>
+                    <button class="btn-confirm" onclick="doExportAll()">确认导出</button>
+                </div>
             </div>
         </div>
 
@@ -141,12 +189,44 @@
                 <div class="progress-bar-container">
                     <div class="progress-bar" id="progress-bar"></div>
                 </div>
-                <span class="progress-text" id="progress-text">0/13</span>
+                <div class="progress-detail">
+                    <span class="progress-text" id="progress-text">0/13 项已完成</span>
+                    <span class="progress-percent" id="progress-percent">0%</span>
+                </div>
+                <div class="missing-fields-hint" id="missing-hint" onclick="showMissingFields()"></div>
             </div>
             <div class="module-grid" id="module-list"></div>
             <div class="export-section">
                 <button class="btn-export" onclick="exportPatientData()">导出该患者数据</button>
+                <button class="btn-review" onclick="showReviewScreening()">📋 复核纳排</button>
                 <button class="btn-delete" id="delete-btn" onclick="deletePatient()">🗑️ 永久删除患者</button>
+            </div>
+        </div>
+
+        <!-- 缺失字段弹窗 -->
+        <div id="missing-fields-modal" class="modal">
+            <div class="modal-content modal-large">
+                <h3>缺失关键字段清单</h3>
+                <div id="missing-fields-list" class="missing-fields-list"></div>
+                <div class="modal-buttons">
+                    <button class="btn-cancel" onclick="hideMissingFields()">关闭</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- 纳排复核弹窗 -->
+        <div id="review-screening-modal" class="modal">
+            <div class="modal-content modal-large">
+                <h3>纳排复核</h3>
+                <div id="review-screening-content"></div>
+                <div class="input-group" style="margin-top:12px;">
+                    <label>复核原因</label>
+                    <input type="text" id="review-reason" placeholder="请输入复核修改原因">
+                </div>
+                <div class="modal-buttons">
+                    <button class="btn-cancel" onclick="hideReviewScreening()">取消</button>
+                    <button class="btn-confirm" onclick="saveReviewScreening()">保存复核</button>
+                </div>
             </div>
         </div>
 
