简化密码显示切换为文字按钮

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
                     </div>
                     <div class="input-group">
                         <label>密码</label>
-                        <div class="password-wrapper">
-                            <input type="password" id="password-input" placeholder="请输入密码">
-                            <span class="toggle-password" onclick="togglePassword()">👁</span>
-                        </div>
+                        <input type="password" id="password-input" placeholder="请输入密码">
+                        <span class="toggle-password" onclick="togglePassword()">显示</span>
                     </div>
                     <button class="btn-primary" onclick="handleLogin()">进入系统</button>
                 </div>
