--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>干燥综合征健康管理</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=16">
 </head>
 <body>
     <div id="app">
@@ -24,8 +24,17 @@
                     </div>
                     <div class="input-group">
                         <label>密码</label>
-                        <input type="password" id="password-input" placeholder="请输入密码">
-                        <span class="toggle-password" onclick="togglePassword()">显示</span>
+                        <div class="password-wrapper">
+                            <input type="password" id="password-input" placeholder="请输入密码" autocomplete="current-password">
+                            <button type="button" class="toggle-password" aria-label="显示密码" aria-pressed="false" onclick="togglePassword()">
+                                <svg class="eye-icon eye-on" viewBox="0 0 24 24" aria-hidden="true">
+                                    <path d="M12 5c5.5 0 9.6 4.2 10.9 6.2.2.3.2.7 0 1C21.6 14.8 17.5 19 12 19S2.4 14.8 1.1 12.2c-.2-.3-.2-.7 0-1C2.4 9.2 6.5 5 12 5zm0 2C7.8 7 4.4 10.2 3.2 11.7 4.4 13.2 7.8 17 12 17s7.6-3.8 8.8-5.3C19.6 10.2 16.2 7 12 7zm0 2.5A2.5 2.5 0 1 1 12 14a2.5 2.5 0 0 1 0-5z"/>
+                                </svg>
+                                <svg class="eye-icon eye-off" viewBox="0 0 24 24" aria-hidden="true">
+                                    <path d="M3.3 2.3 21.7 20.7l-1.4 1.4-3-3C15.8 19.7 13.9 20 12 20 6.5 20 2.4 15.8 1.1 13.2c-.2-.3-.2-.7 0-1 1-1.6 3.3-4 6.5-5.4L1.9 3.7 3.3 2.3zm6.2 6.2c.8-.3 1.6-.5 2.5-.5a4 4 0 0 1 4 4c0 .9-.2 1.7-.5 2.5l-1.6-1.6c.1-.3.1-.6.1-.9a2 2 0 0 0-2-2c-.3 0-.6 0-.9.1L9.5 8.5zm2.5 9.5c-4.2 0-7.6-3.8-8.8-5.3.8-1 2.5-2.8 4.8-4l1.6 1.6a4 4 0 0 0 5.6 5.6l1.6 1.6c-1.3.6-2.9 1-4.8 1z"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                     <button class="btn-primary" onclick="handleLogin()">进入系统</button>
                 </div>
@@ -241,8 +250,8 @@
             <div class="form-container" id="form-container"></div>
         </div>
     </div>
-    <script src="js/data.js"></script>
-    <script src="js/data2.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/data.js?v=16"></script>
+    <script src="js/data2.js?v=16"></script>
+    <script src="js/app.js?v=16"></script>
 </body>
 </html>
